# LLM-ZoomCamp

./: .gitignore  README.md  pyproject.toml
01_Intro/: 01-Intro_homework.ipynb  RAG.ipynb  RAG_elastic_search.ipynb  RAG_intro.ipynb
02_vector_search/: 02_vector_homework.ipynb  Qdrant.ipynb  Rag.ipynb  hybrid_search.ipynb
03_Evaluations/: ground_truth_data.ipynb  ground_truth_dataset.csv  note.md
03_Evaluations/rag_evaluation/: notes.md
03_Evaluations/search_evaluation/: evaluation.ipynb  note.md
oa_agents/: 0a-Agents_Homework.ipynb  agent_rag.ipynb
unit-1/: RAG_intro.ipynb
workshops/dlt/: Cogne_dlt.ipynb  dlt.md  dlt_homework.ipynb
